--- a/.github/workflows/volumes.yml
+++ b/.github/workflows/volumes.yml
@@ -16,10 +16,14 @@ concurrency:
 jobs:
   volwatch:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Trading
     env:
       PYTHONIOENCODING: "utf-8"
       TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
       TG_CHAT_ID:   ${{ secrets.TG_CHAT_ID }}
+      TZ: Europe/Rome
 
     steps:
       - name: Checkout
@@ -36,9 +40,9 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          pip install requests tenacity
 
-      - name: Run volume_watch.py (auto-send to Telegram, chunked)
+      - name: Run volume_watch.py (single Telegram message)
         run: |
           python volume_watch.py \
             --mode from-screener \
@@ -50,16 +54,14 @@ jobs:
             --rps-ds 2.0 \
             --funnel-show 100 \
             --skip-unchanged-days 0 \
-            --send-telegram \
-            --max-chars 3800 \
-            --tg-sleep 0.8
+            --send-telegram
 
       - name: Commit state (volwatch)
         if: always()
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add state/volwatch/*.json state/telegram/msg_volwatch.html || true
+          git add state/volwatch/*.json state/telegram/msg_volwatch.html state/top_pairs.json || true
           if ! git diff --cached --quiet; then
             git commit -m "volwatch: update $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
             git push
