--- a/.github/workflows/young_whale_finder.yml
+++ b/.github/workflows/young_whale_finder.yml
@@ -60,12 +60,13 @@ jobs:
           TOKENS["B2"]="0x783c3f003f172c6Ac5AC700218a357d2D66Ee2a2"
           TOKENS["LA"]="0x389AD4bb96d0D6EE5B6eF0EFAF4b7db0bA2e02a0"
           TOKENS["RIVER"]="0xdA7AD9dea9397cffdDAE2F8a052B82f1484252B3"
+          TOKENS["KGEN"]= "0xF3d5b4c34Ed623478cc5141861776E6cf7AE3A1E"
 
           mkdir -p out
 
           EXIT_CODE=0
           # ordine fisso (aggiunta RIVER)
-          for SYM in AIA BLESS B2 LA RIVER; do
+          for SYM in AIA BLESS B2 LA RIVER KGEN; do
             ADDR="${TOKENS[$SYM]}"
             echo "Running ${SYM} (${ADDR})"
             CMD="python young_whale_finder.py \
